/***********************************************************************
 X3 ChangeLog

2006-10-03  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Fix for bug 1551717. If automode is set to 0
	in a channel and a user auths in the channel, the user will not
	receive autoop etc if they have it enabled in uset.

2006-10-03  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Check for connect timer entries before adding new
	ones, hopefully will fix bug 1570408 (pLaYa, let us know)

2006-09-25  Neil Spierling  <sirvulcan@gmail.com>

	* src/modcmd.c: Shortened ThiefMaster to just his nick as per request
	by him.

2006-09-16  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Do autojoin 5 seconds after handle_auth. Seems its
	happening before autohide. Let me know if its still happening before
	autohide.

	* src/chanserv.help: Updated the AUTOJOIN bit.

2006-09-13  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.help: improved the help listing for the info command,
	and information help category.

2006-09-10  Neil Spierling  <sirvulcan@gmail.com>

	* src/mod-memoserv.c: Fixed crash bug.

	* src/spamserv.c: Ignore opers.

2006-08-28  Neil Spierling  <sirvulcan@gmail.com>

	* README: tweaks.

2006-08-27  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.help: Tweaked a , to .

2006-08-27  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.help: Removed privs menu so we can release a tarball.

2006-08-25  Alex Schumann   <rubin@afternet.org>

	* src/chanserv.c: fix uset reply for halfops

	* src/nickserv.help: document the 'b' account flag

2006-08-26  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added hidden host style option and key options
	for style 2.

	* src/hosthiding.h: Remove KEY #defines.

	* src/hosthiding.c: Set the keys only once using the conf values.

	* src/nickserv.c: Generate hidden hosts off crypt hosts instead
	of standard hidden hosts if style is 2.
