@@ -1,7 +1,12 @@
 /***********************************************************************
  X3 ChangeLog
 
-2006-10-03  Neil Spierling  <sirvulcan@gmail.com>
+2006-10-04  Neil Spierling  <sirvulcan@gmail.com>
+
+	* src/nickserv.c: Fix for bug 1555621. Cookie data will be copied
+	over with odelcookie now.
+
+2006-10-04  Neil Spierling  <sirvulcan@gmail.com>
 
 	* src/chanserv.c: Fix for bug 1551717. If automode is set to 0
 	in a channel and a user auths in the channel, the user will not
